--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c88a92">  <td>23/09/10 23:25:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.verifyInvalidLogin()[pri:0, instance:TestCase.LoginTestCase@f6efaab]">verifyInvalidLogin</td> 
-  <td>main@1725008249</td>   <td></td> </tr>
-<tr bgcolor="c88a92">  <td>23/09/10 23:25:42</td>   <td>37201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.verifyValidLogin()[pri:0, instance:TestCase.LoginTestCase@f6efaab]">verifyValidLogin</td> 
-  <td>main@1725008249</td>   <td></td> </tr>
-<tr bgcolor="f99788">  <td>23/09/10 23:23:05</td>   <td>-119510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyInfoTestCases.fillPersonalDetails()[pri:0, instance:TestCase.MyInfoTestCases@1bd4fdd]">fillPersonalDetails</td> 
-  <td>main@1725008249</td>   <td></td> </tr>
+<tr bgcolor="908cc0">  <td>23/09/16 16:24:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.verifyValidLogin()[pri:0, instance:TestCase.LoginTestCase@7cc0cdad]">verifyValidLogin</td> 
+  <td>main@9190301</td>   <td></td> </tr>
+<tr bgcolor="719efb">  <td>23/09/16 16:22:40</td>   <td>-136123</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyInfoTestCases.fillPersonalDetails()[pri:0, instance:TestCase.MyInfoTestCases@4562e04d]">fillPersonalDetails</td> 
+  <td>main@9190301</td>   <td></td> </tr>
+<tr bgcolor="908cc0">  <td>23/09/16 16:24:33</td>   <td>-23607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.verifyInvalidLogin()[pri:0, instance:TestCase.LoginTestCase@7cc0cdad]">verifyInvalidLogin</td> 
+  <td>main@9190301</td>   <td></td> </tr>
 </table>
