--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9ada3">  <td>23/09/16 20:39:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LaunchURL()[pri:0, instance:TestCase.LoginTestCase@6302bbb1]">&gt;&gt;LaunchURL</td> 
-<td>&nbsp;</td>  <td>main@1239807799</td>   <td></td> </tr>
-<tr bgcolor="a9ada3">  <td>23/09/16 20:39:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LaunchURL()[pri:0, instance:TestCase.LoginTestCase@6302bbb1]">&gt;&gt;LaunchURL</td> 
-<td>&nbsp;</td>  <td>main@1239807799</td>   <td></td> </tr>
+<tr bgcolor="a9ada3">  <td>23/09/17 14:24:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LaunchURL()[pri:0, instance:TestCase.LoginTestCase@4562e04d]">&gt;&gt;LaunchURL</td> 
+<td>&nbsp;</td>  <td>main@1444635922</td>   <td></td> </tr>
+<tr bgcolor="a9ada3">  <td>23/09/17 14:24:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LaunchURL()[pri:0, instance:TestCase.LoginTestCase@4562e04d]">&gt;&gt;LaunchURL</td> 
+<td>&nbsp;</td>  <td>main@1444635922</td>   <td></td> </tr>
+<tr bgcolor="719efb">  <td>23/09/17 14:24:31</td>   <td>-7771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.VerifyValidLogin()[pri:0, instance:TestCase.LoginTestCase@4562e04d]">VerifyValidLogin</td> 
+  <td>main@1444635922</td>   <td></td> </tr>
+<tr bgcolor="719efb">  <td>23/09/17 14:25:08</td>   <td>29957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCase.verifyInvalidLogin()[pri:0, instance:TestCase.LoginTestCase@4562e04d]">verifyInvalidLogin</td> 
+  <td>main@1444635922</td>   <td></td> </tr>
 </table>
